# postik

./: .env.dist  .gitignore  README.md  setup.cfg
src/handler_bot_postik/: bot.py  main.py  pyproject.toml  services.py  settings.py  utils.py
src/handler_bot_postik/app/: bot.py  middlewares.py  services.py  utils.py
src/handler_bot_postik/core/: constants.py  database.py  settings.py
src/manager_bot_postik/: bot.py  pyproject.toml
src/postik/: manage.py  pyproject.toml
src/postik/api/: permissions.py  serailizer.py  serailizers.py  urls.py  views.py
src/postik/core/: models.py  views.py
src/postik/dashboards/: forms.py  urls.py  views.py
src/postik/dashboards/utils/: images.py  sessions.py  telegram.py
src/postik/postik/: asgi.py  settings.py  urls.py  wsgi.py
src/postik/posts/: admin.py  constants.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
src/postik/posts/migrations/: 0001_initial.py  0002_auto_20240609_1220.py  0003_post_is_active.py  0004_auto_20240617_1611.py  0005_alter_post_message_id.py  0006_auto_20240625_0737.py  0007_auto_20240627_1444.py  0008_auto_20240628_1346.py  0009_auto_20240628_1402.py  0010_alter_card_image.py  0011_auto_20240629_0458.py  0012_alter_post_message_id.py  0013_alter_postpurchase_unique_together.py  0014_alter_cardpost_options_cardpost_created_at_and_more.py  0015_alter_card_image_alter_post_message_id_and_more.py  0016_alter_lead_subscriber_telegram_id_and_more.py  0017_alter_post_price_alter_post_title.py  0018_alter_card_title_alter_post_description.py
src/postik/templates/: base.html
src/postik/templates/dashboards/: connect.html  design.html
src/postik/theme/: package-lock.json  package.json
src/postik/users/: admin.py  constants.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
(+48 files in other folders)
