[tool.poetry]
name = "manager-bot-postik"
version = "0.1.0"
description = ""
authors = ["eslupmi101 <ajsen-andreev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.6.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
loguru = "^0.7.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
